// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor plugins normalize-parameters given Path Item Object is defined in Components.callbacks should skip the Path Item from normalization 1`] = `
(OpenApi3_1Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (ComponentsElement
      (MemberElement
        (StringElement)
        (ObjectElement
          (MemberElement
            (StringElement)
            (CallbackElement
              (MemberElement
                (StringElement)
                (PathItemElement
                  (MemberElement
                    (StringElement)
                    (ArrayElement
                      (ParameterElement
                        (MemberElement
                          (StringElement)
                          (StringElement))
                        (MemberElement
                          (StringElement)
                          (StringElement)))))
                  (MemberElement
                    (StringElement)
                    (OperationElement)))))))))))
`;

exports[`refractor plugins normalize-parameters given Path Item Object is defined in Components.pathItems should skip the Path Item from normalization 1`] = `
(OpenApi3_1Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (ComponentsElement
      (MemberElement
        (StringElement)
        (ObjectElement
          (MemberElement
            (StringElement)
            (PathItemElement
              (MemberElement
                (StringElement)
                (ArrayElement
                  (ParameterElement
                    (MemberElement
                      (StringElement)
                      (StringElement))
                    (MemberElement
                      (StringElement)
                      (StringElement)))
                  (ParameterElement
                    (MemberElement
                      (StringElement)
                      (StringElement))
                    (MemberElement
                      (StringElement)
                      (StringElement)))))
              (MemberElement
                (StringElement)
                (OperationElement)))))))))
`;
